fix feature: customize scrollbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -97,3 +97,42 @@
     padding-left: 1.5em;
     padding-right: 1.5em;
 }
+/* scroll bars */
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 6px;
+}
+
+.comment-list::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    background-color: transparent;
+}
+
+.comment-list::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.comment-list::-webkit-scrollbar-thumb {
+    background-color: transparent;
+    border-radius: 6px;
+}
+
+.comment-list:hover::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+.comment-list:hover::-webkit-scrollbar-thumb {
+    background-color: rgba(104, 87, 255, 0.1);
+    border-radius: 6px;
+}
+
